--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -14413,6 +14413,7 @@ server-version=إصدار الخادم (2010 أو 2013)
 servers=الخادم
 service=الخدمة
 service-access-policy-entry-default-asset-entry-title=الوصول العام إلى واجهة برمجة التطبيقات لإدخال الأصل
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=الوصول العام إلى واجهة برمجة تطبيقات بحث التقويم
 service-access-policy-entry-default-object-title=الوصول العام إلى واجهة برمجة تطبيقات البحث عن كائن
 service-access-policy-name=اسم سياسة الوصول إلى الخدمة
@@ -17794,6 +17795,7 @@ two-letter-iso-code=رمز ISO من حرفين
 txtai-host-address=عنوان مضيف txtai
 type=النوع
 type-a-comma-or-press-enter-to-input-a-synonym=اكتب فاصلة أو اضغط على إدخال لإدخال المترادف.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=اكتب فاصلة أو اضغط على إدخال لإدخال عنوان بريد إلكتروني.
 type-a-comma-or-press-enter-to-input-roles=اكتب فاصلة أو اضغط على إدخال لإدخال الأدوار.
 type-a-single-email-address=أكتب بريد ألكتروني واحد:
