--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -14413,6 +14413,7 @@ server-version=Версия на сървъра (2010 или 2013) (Automatic Tr
 servers=Сървър
 service=Услуга
 service-access-policy-entry-default-asset-entry-title=Публичен достъп до API за запис на активи (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Публичен достъп до API за търсене на календар (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Име на правилата за достъп до услугата (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Двубуквени ISO код (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Тип
 type-a-comma-or-press-enter-to-input-a-synonym=Въведете запетая или натиснете клавиша Enter, за да въведете синоним. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Въведете единичен електронен адрес:
