--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -14415,6 +14415,7 @@ server-version=Versió del servidor (2010 o 2013)
 servers=Servidors
 service=Servei
 service-access-policy-entry-default-asset-entry-title=Accés públic a l'API de l'entrada de contingut
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Accés públic a l'API de cerca de calendari
 service-access-policy-entry-default-object-title=Accés públic a l'API de cerca d'objectes
 service-access-policy-name=Nom de la norma d'accés al servei
@@ -17796,6 +17797,7 @@ two-letter-iso-code=Codi ISO de dues lletres
 txtai-host-address=Adreça de l'amfitrió txtai
 type=Tipus
 type-a-comma-or-press-enter-to-input-a-synonym=Escriviu una coma o premeu Retorn per introduir un sinònim.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Escriviu una coma o premeu la tecla Retorn per introduir les adreces de correu electrònic.
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Introduïu una adreça de correu:
