--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -14415,6 +14415,7 @@ server-version=Serverversion (2010 oder 2013)
 servers=Server
 service=Dienst
 service-access-policy-entry-default-asset-entry-title=Öffentlicher Zugriff auf das Asset-Eintrag-API
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Öffentlicher Zugriff auf Such-API des Kalenders
 service-access-policy-entry-default-object-title=Öffentlicher Zugriff auf die Such-API des Objekts
 service-access-policy-name=Name der Service-Zugriffsrichtlinie
@@ -17796,6 +17797,7 @@ two-letter-iso-code=ISO-Code mit zwei Buchstaben
 txtai-host-address=txtai Host-Adresse
 type=Typ
 type-a-comma-or-press-enter-to-input-a-synonym=Geben Sie ein Komma ein oder drücken Sie die Eingabetaste, um ein Synonym einzugeben.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Geben Sie ein Komma ein oder drücken Sie die Eingabetaste, um E-Mail-Adressen einzugeben.
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Eine einzelne E-Mail-Adresse eingeben:
