--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -14413,6 +14413,7 @@ server-version=Έκδοση διακομιστή (2010 ή 2013) (Automatic Trans
 servers=Διακομιστές (Automatic Translation)
 service=Υπηρεσία
 service-access-policy-entry-default-asset-entry-title=Πρόσβαση του κοινού στο API καταχώρησης περιουσιακών στοιχείων (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Πρόσβαση του κοινού στο API αναζήτησης ημερολογίου (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Όνομα πολιτικής πρόσβασης υπηρεσίας (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Κωδικός ISO δύο γραμμάτων (Automatic Tran
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Τύπος
 type-a-comma-or-press-enter-to-input-a-synonym=Πληκτρολογήστε κόμμα ή πατήστε enter για να εισαγάγετε ένα συνώνυμο. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Δώστε μόνο μια διεύθυνση email:
