--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -14419,6 +14419,7 @@ server-version=Server Version (2010 or 2013)
 servers=Servers
 service=Service
 service-access-policy-entry-default-asset-entry-title=Public Access to the Asset Entry API
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API
 service-access-policy-entry-default-calendar-title=Public Access to the Calendar Search API
 service-access-policy-entry-default-object-title=Public Access to the Object Search API
 service-access-policy-name=Service Access Policy Name
@@ -17800,6 +17801,7 @@ two-letter-iso-code=Two-Letter ISO Code
 txtai-host-address=txtai Host Address
 type=Type
 type-a-comma-or-press-enter-to-input-a-synonym=Type a comma or press enter to input a synonym.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag.
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses.
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles.
 type-a-single-email-address=Type a single email address:
