--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -14415,6 +14415,7 @@ server-version=Versión de servidor (2010 o 2013)
 servers=Servidores
 service=Servicio
 service-access-policy-entry-default-asset-entry-title=Acceso público a la API de entrada de activos
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Acceso público al API de búsqueda en calendarios
 service-access-policy-entry-default-object-title=Acceso público a la API de búsqueda de objetos
 service-access-policy-name=Nombre de la política de acceso del servicio
@@ -17796,6 +17797,7 @@ two-letter-iso-code=Código ISO de dos letras
 txtai-host-address=Dirección de host de txtai
 type=Tipo
 type-a-comma-or-press-enter-to-input-a-synonym=Escriba una coma o presione Entrar para agregar un sinónimo.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Escriba una coma o presione Entrar para añadir direcciones de correo electrónico.
 type-a-comma-or-press-enter-to-input-roles=Escriba una coma o presione Entrar para especificar roles.
 type-a-single-email-address=Introduzca una sola dirección de correo:
