--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -14413,6 +14413,7 @@ server-version=Serveri versioon (2010 või 2013) (Automatic Translation)
 servers=Serverid (Automatic Translation)
 service=Teenus
 service-access-policy-entry-default-asset-entry-title=Avalik juurdepääs varakirje API-le (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Avalik juurdepääs kalendriotsingu API-le (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Teenuse juurdepääsupoliitika nimi (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Kahetäheline ISO-kood (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Tüüp
 type-a-comma-or-press-enter-to-input-a-synonym=Tippige koma või vajutage sünonüümi sisestamiseks sisestusklahvi (Enter). (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Kirjuta üks e-postiaadress:
