--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -14413,6 +14413,7 @@ server-version=نسخه سرور (2010 یا 2013) (Automatic Translation)
 servers=سرورها
 service=سرويس
 service-access-policy-entry-default-asset-entry-title=دسترسی عمومی به API منابع
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=دسترسی عمومی به API جستجوی تقویم
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=نام سیاست دسترسی سرویس (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=کد ایزو دو حرفی
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=نوع
 type-a-comma-or-press-enter-to-input-a-synonym=نوع کاما و یا مطبوعات را وارد کنید به ورودی مترادف. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=ورود یک آدرس ایمیل
