--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -14412,6 +14412,7 @@ server-version=Palvelinversio (2010 tai 2013)
 servers=Palvelin
 service=Palvelu
 service-access-policy-entry-default-asset-entry-title=Julkinen Käyttöoikeus Sisältömerkinnän Rajapintaan
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Julkinen Käyttöoikeus Kalenterihaun Rajapintaan
 service-access-policy-entry-default-object-title=Julkinen käyttöoikeus objektihaun rajapintaan
 service-access-policy-name=Palvelun Käytön Käytännenimi
@@ -17792,6 +17793,7 @@ two-letter-iso-code=Kaksikirjaiminen ISO-koodi
 txtai-host-address=txtai-isäntäosoite
 type=Tyyppi
 type-a-comma-or-press-enter-to-input-a-synonym=Kirjoita pilkku tai paina enteriä syöttääksesi synonyymin.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Kirjoita pilkku tai paina enteriä syöttääksesi sähköpostiosoitteen.
 type-a-comma-or-press-enter-to-input-roles=Kirjoita pilkku tai paina enteriä syöttääksesi rooleja.
 type-a-single-email-address=Kirjoita yksi sähköpostiosoite:
