--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -14415,6 +14415,7 @@ server-version=Version du serveur (2010 ou 2013)
 servers=Serveurs
 service=Service
 service-access-policy-entry-default-asset-entry-title=Accès public à l'API des entrées d'actifs
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Accès public à l'API de recherche de calendrier
 service-access-policy-entry-default-object-title=Accès public à l'API de recherche d'objets
 service-access-policy-name=Nom de la police d'accès au service
@@ -17796,6 +17797,7 @@ two-letter-iso-code=Code ISO à deux lettres
 txtai-host-address=adresse de l'hôte txtai
 type=Type
 type-a-comma-or-press-enter-to-input-a-synonym=Saisissez une virgule ou appuyez sur entrée pour ajouter un synonyme.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Saisissez une virgule ou appuyez sur Entrée pour saisir les adresses e-mail.
 type-a-comma-or-press-enter-to-input-roles=Saisissez une virgule ou appuyez sur Entrée pour saisir les rôles.
 type-a-single-email-address=Entrez une seule adresse email :
