--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -14416,6 +14416,7 @@ server-version=Kiszolgáló verzió (2010 vagy 2013)
 servers=Kiszolgálók
 service=Szolgáltatás
 service-access-policy-entry-default-asset-entry-title=Nyilvános hozzáférés a Tartalom bejegyzés API-hoz
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Nyilvános hozzáférés a Naptári keresés API-hoz
 service-access-policy-entry-default-object-title=Nyilvános hozzáférés az Objektumkeresés API-hoz
 service-access-policy-name=Szolgáltatáselérési házirend
@@ -17797,6 +17798,7 @@ two-letter-iso-code=Kétbetűs ISO kód
 txtai-host-address=txtai állomás címe
 type=Típus
 type-a-comma-or-press-enter-to-input-a-synonym=Szinonima megadásához írjon be vesszőt vagy nyomja meg az Entert.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=E-mail-címek megadásához írjon be vesszőt vagy nyomja meg az Entert.
 type-a-comma-or-press-enter-to-input-roles=Szerepkör megadásához írjon be vesszőt vagy nyomja meg az Enter billentyűt.
 type-a-single-email-address=Adj meg egy e-mail címet:
