--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -14414,6 +14414,7 @@ server-version=Versione server (2010 o 2013) (Automatic Translation)
 servers=Server
 service=Servizio
 service-access-policy-entry-default-asset-entry-title=Accesso pubblico all'API di immissione delle risorse (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Accesso pubblico alle API di ricerca del calendario
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nome criterio di accesso al servizio (Automatic Translation)
@@ -17795,6 +17796,7 @@ two-letter-iso-code=Codice ISO di due lettere (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Tipo
 type-a-comma-or-press-enter-to-input-a-synonym=Digitare una virgola o premere INVIO per immettere un sinonimo. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Digita una virgola o premi invio per inserire gli indirizzi email.
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Inserisci un singolo indirizzo email:
