--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -14415,6 +14415,7 @@ server-version=サーバーバージョン (2010 または 2013)
 servers=サーバ
 service=サービス
 service-access-policy-entry-default-asset-entry-title=アセットエントリーAPIを一般公開
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=カレンダー検索APIを一般公開
 service-access-policy-entry-default-object-title=オブジェクト検索 API を一般公開
 service-access-policy-name=サービス アクセス ポリシー名
@@ -17796,6 +17797,7 @@ two-letter-iso-code=2文字のISOコード
 txtai-host-address=txtai ホストアドレス
 type=種類
 type-a-comma-or-press-enter-to-input-a-synonym=同義語を入力するにはカンマを入力するか、Enterを押してください。
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=メールアドレスを入力するにはカンマを入力するか、Enterを押してください。
 type-a-comma-or-press-enter-to-input-roles=ロールを入力するにはカンマを入力するか、Enter を押してください。
 type-a-single-email-address=入力したメールアドレス:
