--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -14413,6 +14413,7 @@ server-version=서버 버전(2010 또는 2013)
 servers=서버
 service=서비스
 service-access-policy-entry-default-asset-entry-title=콘텐츠 항목 API에 대한 공개 액세스
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=캘린더 검색 API에 대한 공개 액세스
 service-access-policy-entry-default-object-title=개체 검색 API에 대한 공개 액세스
 service-access-policy-name=서비스 액세스 정책 이름
@@ -17793,6 +17794,7 @@ two-letter-iso-code=두 글자 ISO 코드
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=유형
 type-a-comma-or-press-enter-to-input-a-synonym=쉼표를 입력하거나 Enter 키를 눌러 동의어를 입력합니다.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=쉼표를 입력하거나 Enter 키를 눌러 이메일 주소를 입력하십시오.
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=단순한 email.address 타자를 치십시요:
