--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -14413,6 +14413,7 @@ server-version=Serverio versija (2010 arba 2013 m.) (Automatic Translation)
 servers=Serveriai (Automatic Translation)
 service=Paslaugų (Automatic Translation)
 service-access-policy-entry-default-asset-entry-title=Vieša prieiga prie turto įrašo API (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Viešoji prieiga prie kalendoriaus ieškos API (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Tarnybos prieigos strategijos pavadinimas (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Dviejų raidžių ISO kodas (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Tipas (Automatic Translation)
 type-a-comma-or-press-enter-to-input-a-synonym=Įveskite kablelis arba paspauskite Enter, kad įvestumėte sinonimą. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Įveskite vieną el. pašto adresą: (Automatic Translation)
