--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -14413,6 +14413,7 @@ server-version=Versi Pelayan (2010 atau 2013) (Automatic Translation)
 servers=Pelayan (Automatic Translation)
 service=Perkhidmatan (Automatic Translation)
 service-access-policy-entry-default-asset-entry-title=Akses Awam ke API Kemasukan Aset (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Akses Awam ke API Gelintar Kalendar (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nama Dasar Capaian Perkhidmatan (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Kod ISO Dua Huruf (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Jenis (Automatic Translation)
 type-a-comma-or-press-enter-to-input-a-synonym=Taip koma atau tekan enter untuk memasukkan sinonim. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Taip alamat e-mel tunggal: (Automatic Translation)
