--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -14416,6 +14416,7 @@ server-version=Serverversie (2010 of 2013)
 servers=Servers
 service=Service
 service-access-policy-entry-default-asset-entry-title=Publieke toegang tot de API voor assetinvoer
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Publieke toegang tot de zoek-API voor de kalender
 service-access-policy-entry-default-object-title=Openbare toegang tot de zoek-API voor het object
 service-access-policy-name=Naam beleid voor toegang tot service
@@ -17797,6 +17798,7 @@ two-letter-iso-code=Tweeletterige ISO-code
 txtai-host-address=txtai-hostadres
 type=Type
 type-a-comma-or-press-enter-to-input-a-synonym=Voer een komma in of druk op Enter om een synoniem op te geven.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Typ een komma of druk op Enter om e-mailadressen in te voeren.
 type-a-comma-or-press-enter-to-input-roles=Voer een komma in of druk op Enter om rollen in te voeren.
 type-a-single-email-address=Vul één e-mailadres in:
