--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -14413,6 +14413,7 @@ server-version=Wersja serwera (2010 lub 2013) (Automatic Translation)
 servers=Serwery
 service=Usługa
 service-access-policy-entry-default-asset-entry-title=Publiczny dostęp do interfejsu API wpisu zasobu (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Publiczny dostęp do interfejsu API wyszukiwania kalendarza (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nazwa zasad dostępu do usługi (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Dwuliterowy kod ISO (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Typ
 type-a-comma-or-press-enter-to-input-a-synonym=Wpisz przecinek lub naciśnij enter, aby wprowadzić synonim. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Wpisz pojedynczy adres e-mail:
