--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -14413,6 +14413,7 @@ server-version=Versão do Servidor (2010 ou 2013)
 servers=Servidores
 service=Serviço
 service-access-policy-entry-default-asset-entry-title=Acesso público para o API de Entrada de conteúdo
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Acesso público para o API de busca do calendário
 service-access-policy-entry-default-object-title=Acesso público para o API de busca de objetivo
 service-access-policy-name=Nome da Política de Acesso a Serviço
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Código ISO de 2 letras
 txtai-host-address=Endereço de host txtai
 type=Tipo
 type-a-comma-or-press-enter-to-input-a-synonym=Digite uma vírgula ou pressione enter para inserir um sinônimo.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Digite uma vírgula ou pressione enter para inserir endereços de e-mail.
 type-a-comma-or-press-enter-to-input-roles=Digite uma vírgula ou pressione Enter para inserir funções.
 type-a-single-email-address=Insira um único email:
