--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -14415,6 +14415,7 @@ server-version=Versão do servidor (2010 ou 2013) (Automatic Translation)
 servers=Servidores
 service=Serviço
 service-access-policy-entry-default-asset-entry-title=Acesso público à API de Entrada de Ativos (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Acesso público à API de pesquisa de calendário (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nome da política de acesso ao serviço (Automatic Translation)
@@ -17796,6 +17797,7 @@ two-letter-iso-code=Código ISO de duas letras (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Tipo
 type-a-comma-or-press-enter-to-input-a-synonym=Digite uma círgula ou pressione digitar para inserir um sinônimo. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Introduza um único endereço de email:
