--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -14413,6 +14413,7 @@ server-version=Versiune server (2010 sau 2013) (Automatic Translation)
 servers=Servere
 service=Servicii
 service-access-policy-entry-default-asset-entry-title=Accesul publicului la API-ul de intrare a activelor (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Acces public la API-ul căutare calendar (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nume politică acces serviciu (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Cod ISO din două litere (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Tip
 type-a-comma-or-press-enter-to-input-a-synonym=Tastați o virgulă sau apăsați enter pentru a introduce un sinonim. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Scrie o singura adresa de email:
