--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -14413,6 +14413,7 @@ server-version=Серверная версия (2010 или 2013) (Automatic Tra
 servers=Серверы
 service=Сервис
 service-access-policy-entry-default-asset-entry-title=Публичный доступ к API входа в активы (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Публичный доступ к API поиска календаря (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Название политики доступа к службам (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Двухротерный код ISO (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Тип
 type-a-comma-or-press-enter-to-input-a-synonym=Введите запятую или нажмите введите для ввода синонима. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Введите один email адрес:
