--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -14413,6 +14413,7 @@ server-version=Verzia servera (2010 alebo 2013) (Automatic Translation)
 servers=Servery
 service=Služba
 service-access-policy-entry-default-asset-entry-title=Verejný prístup k api položky majetku (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Prístup verejnosti k rozhraniam API vyhľadávania v kalendári (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Názov politiky prístupu k službe (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Dvojmiliový iso kód (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Typ
 type-a-comma-or-press-enter-to-input-a-synonym=Ak chcete zadať synonymum, zadajte čiarku alebo stlačte kláves Enter. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Zadajte e-mailovú adresu:
