--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -14413,6 +14413,7 @@ server-version=Različica strežnika (2010 ali 2013) (Automatic Translation)
 servers=Strežnik
 service=Storitev
 service-access-policy-entry-default-asset-entry-title=Javni dostop do API za vnos sredstev (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Javni dostop do API-ja za iskanje koledarja (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Ime pravilnika za dostop do storitev (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Dvočlena ISO koda (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Tip
 type-a-comma-or-press-enter-to-input-a-synonym=Vnesite vejko ali pritisnite enter, da vnesete sinonim. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Vnesi en e-poštni naslov:
