--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -14413,6 +14413,7 @@ server-version=Serverversion (2010 eller 2013)
 servers=Servrar
 service=Tjänst
 service-access-policy-entry-default-asset-entry-title=Offentlig åtkomst till API för tillgångspost
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Offentlig åtkomst till API för kalendersökning
 service-access-policy-entry-default-object-title=Offentlig åtkomst till API för objektsökning
 service-access-policy-name=Namn på tjänståtkomstprincip
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Tvåsiffrig ISO-kod
 txtai-host-address=txtai-värdadress
 type=Typ
 type-a-comma-or-press-enter-to-input-a-synonym=Ange ett kommatecken eller tryck på Retur för att mata in en synonym.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Ange ett kommatecken eller tryck på Retur för att mata in e-postadresser.
 type-a-comma-or-press-enter-to-input-roles=Ange ett kommatecken eller tryck på Retur för att mata in roller.
 type-a-single-email-address=Skriv en e-postadress:
