--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -14413,6 +14413,7 @@ server-version=รุ่นเซิร์ฟเวอร์ (2010 หรือ 
 servers=เซิร์ฟเวอร์
 service=บริการ
 service-access-policy-entry-default-asset-entry-title=การเข้าถึง API รายการแอสเสทแบบสาธารณะ
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=การเข้าถึง API การค้นหาปฏิทินแบบสาธารณะ
 service-access-policy-entry-default-object-title=การเข้าถึง Object Search API แบบสาธารณะ
 service-access-policy-name=ชื่อนโยบายการเข้าถึงบริการ
@@ -17794,6 +17795,7 @@ two-letter-iso-code=ISO โค้ดตัวอักษร 2 ตัว
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=ประเภท
 type-a-comma-or-press-enter-to-input-a-synonym=ใช้คอมม่าหรือกดเอ็นเทอร์เพื่อกรอกนามคำพ้องความหมาย
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=ใช้คอมม่าหรือกดเอ็นเทอร์เพื่อกรอกที่อยู่อีเมล
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=กรอกที่อยู่อีเมลเพียงหนึ่งอัน:
