--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -14413,6 +14413,7 @@ server-version=Sunucu Sürümü (2010 veya 2013) (Automatic Translation)
 servers=Sunucu
 service=Servis
 service-access-policy-entry-default-asset-entry-title=Varlık Girişi API'sine Genel Erişim (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Takvim Arama API'sine Genel Erişim (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Hizmet Erişim İlkesi Adı (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=İki Harfli ISO Kodu (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Yazın
 type-a-comma-or-press-enter-to-input-a-synonym=Eşanlamlı girmek için virgül yazın veya enter tuşuna basın. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Bir e-posta adresi girin:
