--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -14415,6 +14415,7 @@ server-version=服务器版本（2010 或 2013）
 servers=服务器
 service=服务
 service-access-policy-entry-default-asset-entry-title=资产条目 API 的公共访问权限
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=日历搜索 API 的公共访问权限
 service-access-policy-entry-default-object-title=对象搜索 API 的公共访问权限
 service-access-policy-name=服务访问政策名称
@@ -17796,6 +17797,7 @@ two-letter-iso-code=两字母 ISO 代码
 txtai-host-address=txtai 主机地址
 type=类型
 type-a-comma-or-press-enter-to-input-a-synonym=输入逗号，或者按 Enter 输入同义词。
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=键入逗号或按 Enter 输入电子邮件地址。
 type-a-comma-or-press-enter-to-input-roles=键入逗号或按 Enter 键输入角色。
 type-a-single-email-address=输入一个电子邮件地址：
