--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -14414,6 +14414,7 @@ server-version=Server 版本 (2010 or 2013)
 servers=伺服器
 service=服務
 service-access-policy-entry-default-asset-entry-title=資產條目 API 的公共訪問權限
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Calendar Search API 的公共存取權限
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=服務造訪政策名稱
@@ -17795,6 +17796,7 @@ two-letter-iso-code=二位字母 ISO 代碼
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=類型
 type-a-comma-or-press-enter-to-input-a-synonym=輸入逗號，或按 Enter 鍵以輸入同義詞。
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=鍵入一個單一電子郵件位址：
