--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -14413,6 +14413,7 @@ server-version=Serverversion (2010 eller 2013) (Automatic Translation)
 servers=Servers (Automatic Copy)
 service=Tjeneste
 service-access-policy-entry-default-asset-entry-title=Offentlig adgang til API'en for aktivposter (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Offentlig adgang til API'en til kalendersøgning (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Navn på serviceadgangspolitik (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=ISO-kode på to bogstaver (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Typer
 type-a-comma-or-press-enter-to-input-a-synonym=Skriv et komma, eller tryk på enter for at indtaste et synonym. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Indtast en enkelt e-mail-adresse:
