--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -14413,6 +14413,7 @@ server-version=Version du serveur (2010 ou 2013)
 servers=Serveurs
 service=Service
 service-access-policy-entry-default-asset-entry-title=Accès public à l'API des entrées d'actifs
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Accès public à l'API de recherche de calendrier
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nom de la police d'accès au service
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Code ISO à deux lettres
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Type
 type-a-comma-or-press-enter-to-input-a-synonym=Saisissez une virgule ou appuyez sur entrée pour ajouter un synonyme.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Entrez une seule adresse email :
