--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -14413,6 +14413,7 @@ server-version=सर्वर संस्करण (2010 या 2013) (Automat
 servers=सर्वर्स
 service=सर्विस
 service-access-policy-entry-default-asset-entry-title=सार्वजनिक प्रवेश एसेट एंट्री एपीआई के लिए
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=कैलेंडर खोज एपीआई के लिए सार्वजनिक पहुँच
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=सेवा पहुंच नीति का नाम (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=दो पत्र आईएसओ कोड (Automatic Tra
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=प्रकार (Automatic Translation)
 type-a-comma-or-press-enter-to-input-a-synonym=एक अल्पविराम टाइप करें या एक पर्याय इनपुट करने के लिए प्रेस दर्ज करें। (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Type a single email पता:
