--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -14413,6 +14413,7 @@ server-version=Serverversjon (2010 eller 2013) (Automatic Translation)
 servers=Tjenere
 service=Tjeneste
 service-access-policy-entry-default-asset-entry-title=Offentlig tilgang til ressursinnlegg-API
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Offentlig tilgang til kalendersøk-API
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Navn på policy for tjenestetilgang (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=ISO-kode med to bokstaver (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Type (Automatic Translation)
 type-a-comma-or-press-enter-to-input-a-synonym=Skriv inn et komma, eller trykk ENTER for å skrive inn et synonym. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Skriv inn en enkelt e-postadresse:
