--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -14416,6 +14416,7 @@ server-version=Server Version (2010 or 2013) (Automatic Copy)
 servers=Servers (Automatic Copy)
 service=Service (Automatic Copy)
 service-access-policy-entry-default-asset-entry-title=Public Access to the Asset Entry API (Automatic Copy)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Public Access to the Calendar Search API (Automatic Copy)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Service Access Policy Name (Automatic Copy)
@@ -17797,6 +17798,7 @@ two-letter-iso-code=Two-Letter ISO Code (Automatic Copy)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Type (Automatic Copy)
 type-a-comma-or-press-enter-to-input-a-synonym=Type a comma or press enter to input a synonym. (Automatic Copy)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Vul één enkel e-mailadres in:
