--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -14413,6 +14413,7 @@ server-version=Phiên bản máy chủ (2010 hoặc 2013) (Automatic Translation
 servers=Các máy chủ
 service=Dịch vụ
 service-access-policy-entry-default-asset-entry-title=Truy cập công khai vào API mục nhập tài sản (Automatic Translation)
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Truy cập công khai vào API Tìm kiếm Lịch (Automatic Translation)
 service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Tên Chính sách Truy cập Dịch vụ (Automatic Translation)
@@ -17794,6 +17795,7 @@ two-letter-iso-code=Mã ISO hai chữ cái (Automatic Translation)
 txtai-host-address=txtai Host Address (Automatic Copy)
 type=Nhập
 type-a-comma-or-press-enter-to-input-a-synonym=Nhập dấu phẩy hoặc nhấn enter để nhập từ đồng nghĩa. (Automatic Translation)
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses. (Automatic Copy)
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles. (Automatic Copy)
 type-a-single-email-address=Gõ vào một địa chỉ email:
